objects/DCCA_LeTS_Div_Keyword__c.object
<CustomObject>
    <label>DCCA LeTS Div Keyword</label>
    <nameField>
        <displayFormat>2023-2024-KY#{0000000}</displayFormat>
        <label>DCCA LeTS Div Keyword Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCCA LeTS Div Keywords</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Keyword_Score__c</fullName>
        <formula>ROUND(Keyword_Match_Score__c,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Keyword Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keyword_Match_Score__c</fullName>
        <label>Keyword Match Score</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeTS_DivKY_ComboKey__c</fullName>
        <formula>DCCA_LeTS_KY_Meas_Baseid__c  &amp;  DCCA_LeTS_KY_DIV__c  &amp;  DCCA_LeTS_KY_Keyword__c</formula>
        <label>LeTS DivKY ComboKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword_Full_Context__c</fullName>
        <label>Keyword Full Context</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LeTS_DivKY_ComboValue__c</fullName>
        <externalId>true</externalId>
        <label>LeTS DivKY ComboValue</label>
        <length>121</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Context10__c</fullName>
        <label>Keyword Context10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Context11__c</fullName>
        <label>Keyword Context11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Context12__c</fullName>
        <label>Keyword Context12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KY_PDF_name__c</fullName>
        <label>KY PDF name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KY_PDF_datetime__c</fullName>
        <label>KY PDF datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Keyword_Measure__c</fullName>
        <formula>DCCA_LeTS_KY_Meas_Base__r.DCCA_LeTS_Meas_HSL_Link__c</formula>
        <label>Keyword Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_DIV__c</fullName>
        <externalId>true</externalId>
        <label>Keyword DIV</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Keyword__c</fullName>
        <externalId>true</externalId>
        <label>Matching Keyword</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_DO__c</fullName>
        <label>DCCA LeTS KY Email DO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_PageLine__c</fullName>
        <label>Keyword PageLine</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_ASO__c</fullName>
        <label>DCCA LeTS KY Email ASO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_All__c</fullName>
        <label>DCCA LeTS KY Email All</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_DCA__c</fullName>
        <label>DCCA LeTS KY Email DCA</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_DFI__c</fullName>
        <label>DCCA LeTS KY Email DFI</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_INS__c</fullName>
        <label>DCCA LeTS KY Email INS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_OAH__c</fullName>
        <label>DCCA LeTS KY Email OAH</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_OCP__c</fullName>
        <label>DCCA LeTS KY Email OCP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_PVL__c</fullName>
        <label>DCCA LeTS KY Email PVL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Meas_Base__c</fullName>
        <label>DCCA LeTS KY Meas Base</label>
        <referenceTo>DCCA_LeTS_Measure_Main__c</referenceTo>
        <relationshipLabel>DCCA LeTS Div Keywords</relationshipLabel>
        <relationshipName>DCCA_LeTS_Div_Keywords</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_BREG__c</fullName>
        <label>DCCA LeTS KY Email BREG</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_CATV__c</fullName>
        <label>DCCA LeTS KY Email CATV</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_ISCO__c</fullName>
        <label>DCCA LeTS KY Email ISCO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_RICO__c</fullName>
        <label>DCCA LeTS KY Email RICO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_PercentLoc__c</fullName>
        <label>Keyword PercentLoc</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_Coord__c</fullName>
        <label>DCCA LeTS KY Email Coord</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Email_HPEAP__c</fullName>
        <label>DCCA LeTS KY Email HPEAP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Meas_Baseid__c</fullName>
        <externalId>true</externalId>
        <label>DCCA LeTS KY Meas Baseid</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Keyword_Location__c</fullName>
        <label>Keyword Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_KY_Location_Entry__c</fullName>
        <formula>VALUE(DCCA_LeTS_KY_PercentLoc__c)</formula>
        <label>Keyword Location Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>Prior_LeTS_Div_Keyword_Matches</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_KY_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_KY_DIV__c</columns>
        <columns>DCCA_LeTS_KY_Keyword__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_KY_Meas_Base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_KY_Meas_Baseid__c</field>
            <operation>startsWith</operation>
            <value>PRIOR-</value>
        </filters>
        <label>Prior LeTS Div Keyword Matches</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>DCCA_LeTS_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCA_Division_Keyword_Matches</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_KY_Meas_Baseid__c</columns>
        <columns>Keyword_Measure__c</columns>
        <columns>DCCA_LeTS_KY_DIV__c</columns>
        <columns>DCCA_LeTS_KY_Keyword__c</columns>
        <columns>DCCA_LeTS_KY_PercentLoc__c</columns>
        <columns>DCCA_LeTS_KY_Context__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_KY_Meas_Base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_KY_DIV__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <label>DCA Division Keyword Matches</label>
        <sharedTo>
            <group>DCCA_LeTS_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LeTS_Division_Keyword_Matches</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_KY_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_KY_DIV__c</columns>
        <columns>DCCA_LeTS_KY_Keyword__c</columns>
        <columns>Keyword_Match_Score__c</columns>
        <columns>LeTS_DivKY_ComboKey__c</columns>
        <columns>LeTS_DivKY_ComboValue__c</columns>
        <columns>Keyword_Score__c</columns>
        <columns>Keyword_Full_Context__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_KY_Meas_Base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_KY_Meas_Baseid__c</field>
            <operation>notContain</operation>
            <value>PRIOR-</value>
        </filters>
        <label>LeTS Division Keyword Matches</label>
    </listViews>
    <listViews>
        <fullName>DFI_LeTS_Division_Keyword_Matches</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_KY_Meas_Baseid__c</columns>
        <columns>Keyword_Measure__c</columns>
        <columns>DCCA_LeTS_KY_DIV__c</columns>
        <columns>DCCA_LeTS_KY_Keyword__c</columns>
        <columns>DCCA_LeTS_KY_PercentLoc__c</columns>
        <columns>DCCA_LeTS_KY_Context__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_KY_Meas_Base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_KY_DIV__c</field>
            <operation>equals</operation>
            <value>DFI</value>
        </filters>
        <label>DFI LeTS Division Keyword Matches</label>
        <sharedTo>
            <group>DFI_Leg_Coord</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>XXX_LeTS_Division_Keyword_Matches</fullName>
        <columns>DCCA_LeTS_KY_Meas_Base__c</columns>
        <columns>DCCA_LeTS_KY_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_KY_DIV__c</columns>
        <columns>DCCA_LeTS_KY_Keyword__c</columns>
        <columns>DCCA_LeTS_KY_Context__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_KY_DIV__c</field>
            <operation>equals</operation>
            <value>OCP</value>
        </filters>
        <label>OCP LeTS Division Keyword Matches</label>
    </listViews>
    <listViews>
        <fullName>CATV_LeTS_Division_Keyword_Matches</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_KY_Meas_Baseid__c</columns>
        <columns>Keyword_Measure__c</columns>
        <columns>DCCA_LeTS_KY_DIV__c</columns>
        <columns>DCCA_LeTS_KY_Keyword__c</columns>
        <columns>DCCA_LeTS_KY_PercentLoc__c</columns>
        <columns>DCCA_LeTS_KY_Context__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_KY_Meas_Base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_KY_DIV__c</field>
            <operation>equals</operation>
            <value>CATV</value>
        </filters>
        <label>CATV LeTS Division Keyword Matches</label>
    </listViews>
    <recordTypes>
        <fullName>PRIORDivKY</fullName>
        <active>true</active>
        <label>PRIORDivKY</label>
    </recordTypes>
    <recordTypes>
        <fullName>CurrentDivKY</fullName>
        <active>true</active>
        <description>Current session divKY record</description>
        <label>CurrentDivKY</label>
    </recordTypes>
</CustomObject>